--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         const customShift = parseInt(document.getElementById("customShift").value, 10);
         return isNaN(customShift) ? 0 : customShift;
       } else if (shiftType === "person") {
-        const name = document.getElementById("personName").value || "";
+        const name = document.getElementById("personName").value.toLowerCase() || "";
         return Array.from(name).reduce((sum, c) => sum + c.charCodeAt(0), 0) % 26;
       }
       return 0;
